# loreal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Research_Paper.md
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  dependencies.yml  web-deploy.yml
examples/: add.lr  factorial.lr  fibonacci.lr  greet.lr  higher_order.lr  list_sum.lr  loop.lr  map_list.lr  struct.lr
loreal-web/: astro.config.mjs  package.json  pnpm-lock.yaml
loreal-web/public/: robots.txt
loreal-web/src/layouts/: BaseLayout.astro
loreal-web/src/pages/: docs.astro  index.astro
loreal-web/src/styles/: global.css
loreal_ast/: Cargo.toml
loreal_ast/src/: lib.rs  span.rs  visitor.rs
loreal_cli/: Cargo.toml
loreal_cli/src/: main.rs
loreal_codegen/: Cargo.toml
loreal_codegen/src/: lib.rs
loreal_lexer/: Cargo.toml
loreal_lexer/src/: lib.rs  span.rs  token.rs  utils.rs
loreal_mir/: Cargo.toml
loreal_mir/src/: anf.rs  borrow.rs  graph.rs  lib.rs  liveness.rs  rc.rs  reuse.rs
loreal_parser/: Cargo.toml
loreal_parser/src/: lib.rs
loreal_runtime/: Cargo.toml
loreal_runtime/src/: lib.rs
loreal_semantic/: Cargo.toml
loreal_semantic/src/: compiler_error.rs  error.rs  lib.rs  symbol_table.rs  type_checker.rs  types.rs
