

[workspace]
resolver = "2"
members = ["loreal_ast","loreal_cli","loreal_lexer"]




[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Pasindu Pramodya"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/loreal-lang/loreal"

[workspace.dependencies]
clap = { version = "4.5.47", features = ["derive"] }
miette = { version = "7.0", features = ["fancy"] }
thiserror = "2.0"


# String handling
smol_str = "0.3"
# Type inference and graph algorithms
ena = "0.14"
petgraph = "0.6"