[workspace]
resolver = "2"
members = [
    "loreal_ast",
    "loreal_cli",
    "loreal_lexer",
    "loreal_parser",
    "loreal_semantic",
    "loreal_mir",
    "loreal_codegen",
    "loreal_runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Pasindu Pramodya"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/loreal-lang/loreal"

[workspace.dependencies]
clap = { version = "4.5.47", features = ["derive"] }
miette = { version = "7.0", features = ["fancy"] }
thiserror = "2.0"

smol_str = "0.3"
ena = "0.14"
petgraph = "0.6"
bit-set = "0.8"
mimalloc = "0.1"
